# kactl

./: test-session.md
content/: kactl.tex
content/contest/: CMakeLists.txt  chapter.tex  template.cpp
content/data-structures/: HashMap.h  LiChao.hpp  chapter.tex
content/geometry/: HalfPlaneIntersection.hpp  chapter.tex
content/graph/: Dinic.h  EdmondsKarp.h  chapter.tex
content/numerical/: Integrate.h  chapter.tex
content/tex/: kactlpkg.sty
content/various/: QueueLikeUndo.hpp  chapter.tex
stress-tests/various/: QueueLikeUndo.cpp
